Fix overflow on sober

--- a/templates/sober/style/style.css
+++ b/templates/sober/style/style.css
@@ -37,6 +37,7 @@ body
  	box-sizing: border-box; 
  	color:white;   
   font-family: 'Raleway', sans-serif;
+  overflow-x:hidden;
 }
 
 .wth70pe
